--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  line-height: 1.4;
 }
 
 a{
@@ -20,6 +21,35 @@ p{
 /* Utility Classes */
 .text-primary {
   color: #93cb52;
+}
+
+.l-heading {
+  font-size: 4rem;
+  margin-bottom: 0.75rem;
+  line-height: 1.1;
+}
+
+.lead {
+  font-size: 1.3rem;
+  margin-bottom: 2rem;
+}
+
+.btn {
+  display: inline-block;
+  color: white;
+  background: #93cb52;
+  padding: 0.5rem 2rem;
+  border: none;
+  border-radius: 5px;
+}
+
+.btn:hover {
+  background: #7ab436;
+}
+
+.btn-dark {
+  background: #333;
+  color: white;
 }
 
 /* Navbar */
@@ -52,4 +82,24 @@ p{
   cursor: pointer;
 }
 
+/* Showcase */
+#showcase {
+  background: #333 url('../photos/showcase.jpg') no-repeat center center/cover;
+  height: 100vh;
+  color: white;
+}
 
+#showcase .showcase-content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 0 2rem;
+  /* Overlay */
+  position: absolute;
+  top: 60px;
+  left: 0;
+  background-color: rgba(0,0,0,0.4);
+}
