--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,23 @@ p{
 }
 
 /* Utility Classes */
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 2rem;
+  overflow: hidden;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.m-heading {
+  font-size: 2rem;
+  line-height: 1.1;
+  margin-bottom: 0.75rem;
+}
+
 .text-primary {
   color: #93cb52;
 }
@@ -50,6 +67,16 @@ p{
 .btn-dark {
   background: #333;
   color: white;
+}
+
+.py-1{
+  padding: 1.5rem 0;
+}
+.py-2{
+  padding: 2rem 0;
+}
+.py-3{
+  padding: 3rem 0;
 }
 
 /* Navbar */
@@ -99,7 +126,28 @@ p{
   padding: 0 2rem;
   /* Overlay */
   position: absolute;
-  top: 60px;
+  top: 65px;
   left: 0;
+  right: 0;
+  bottom: 0;
   background-color: rgba(0,0,0,0.4);
+}
+
+/* What We Do */
+#what .items {
+  display: flex;
+  padding: 1rem;
+}
+
+#what .items .item {
+  flex: 1;
+  text-align: center;
+  padding: 1rem;
+}
+
+#what .items .item i {
+  background: #93cb52;
+  padding: 1rem;
+border-radius: 50%;
+margin-bottom: 1rem;
 }
